# Django-DRF

./: Makefile  pyproject.toml
project/: package-lock.json
project/app_bootstrap/: apps.py  urls.py  views.py
project/app_bootstrap/templates/: base_bootsrap.html
project/app_main/: urls.py  views.py
project/app_main/templates/app_main/: index.html
project/app_theme/: apps.py  urls.py  views.py
project/app_theme/static_src/: package-lock.json  package.json  tailwind.config.js
project/app_theme/templates/: base_windtail.html
project/app_todo/: admin.py  models.py  urls.py  views.py
project/app_todo/migrations/: 0001_initial.py
project/app_todo/templates/app_todo/: todo_detail.html  todo_form.html  todo_list.html
project/app_user/migrations/: 0001_initial.py
project/config/: settings.py  urls.py
project/templates/: base.html  confirm_delete.html  js.html  navbar.html
