[tool.poetry]
name = "intial-python-projects"
version = "0.1.0"
description = "my project"
authors = ["viktor.simon"]
license = "MIT"
readme = "README.md"
packages = [{include = "intial_python_projects"}]

[tool.poetry.dependencies]
python = "3.10.7"
django = "^4.1.5"
python-dotenv = "^0.21.1"
django-tailwind = "^3.4.0"
django-bootstrap-v5 = "^1.0.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
autoflake = "^2.0.0"
djhtml = "^1.5.2"
pytest = "^7.2.1"
djlint = "^1.19.13"
django-debug-toolbar = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
